--- a/biome.json
+++ b/biome.json
@@ -48,9 +48,7 @@
   },
   "javascript": {
     "formatter": {
-      "quoteStyle": "single",
-      "trailingCommas": "es5",
-      "semicolons": "always"
+      "quoteStyle": "single"
     }
   },
   "assist": {
